--- a/code/www/style.css
+++ b/code/www/style.css
@@ -188,7 +188,7 @@ body h2 {
 	float: right;
 	width:20px;
 	text-align: center;
-	cursor: pointer; 
+	cursor: pointer;
 	right:10px;
 	position: absolute;
 	top: 15px
@@ -226,7 +226,9 @@ body h2 {
 
 
 #generate_file,
-#generate_file_data_count {
+#generate_file_data_count,
+#save_query_data_count,
+#save_query {
 	background-color: #348bcb;
 	padding: 20px;
 	color: #FFFFFF;
@@ -238,14 +240,26 @@ body h2 {
 	max-width:300px;
 }
 
+#save_query_data_count,
+#save_query {
+	background-color:#f0f0f0;
+	border:1px solid #dadada;
+	color:#333333;
+	margin-bottom:40px;
+}
+
 #generate_file:hover,
-#generate_file_data_count:hover {
+#generate_file_data_count:hover,
+#save_query_data_count:hover,
+#save_query:hover {
 	transform: scale(1.01);
 	box-shadow:3px 3px 9px rgba(0,0,0,0.2);
 }
 
 #generate_file:active,
-#generate_file_data_count:active {
+#generate_file_data_count:active,
+#save_query_data_count:active,
+#save_query:active {
 	transform: scale(1);
 }
 
@@ -433,4 +447,84 @@ body h2 {
 		margin:15px;
 		height:30px;
 	}
+}
+
+
+/* SAVE QUERY WINDOW */
+
+.savequery,
+.savequery-datacount {
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	background-color: rgba(0,0,0,0.8) !important;
+	z-index: 100;
+	visibility:hidden;
+	opacity:0;
+	transition: all 0.3s ease-out;
+	margin:0 !important;
+	padding:0 !important;
+	left:0;
+	top:0;
+}
+
+.savequery.active,
+.savequery-datacount.active {
+	visibility:visible;
+	opacity:1;
+	transition: all 0.3s ease-out;
+}
+
+.savequery-wrap-inner ,
+.savequery-wrap-inner-datacount {
+	padding: 40px;
+	position: fixed;
+	top: 50%;
+	max-width: 500px;
+	border-radius: 5px;
+	background-color: #f9f9f9;
+	box-shadow: 3px 3px 15px rgba(0,0,0,0.3);
+	left: 50%;
+	transform: translateY(-50%) translateX(-50%);
+}
+
+.savequery-close-button,
+.savequery-close-button-datacount {
+	position: absolute;
+	right: 5px;
+	overflow:auto;
+	height:20px;
+	width:20px;
+	top: 5px;
+	line-height: 0;
+	color: #999999;
+	cursor: pointer;
+	transition:all 0.2s ease-out;
+}
+
+.savequery-close-button:hover,
+.savequery-close-button-datacount:hover {
+	transform:scale(1.2);
+	transition:all 0.2s ease-out;
+}
+
+
+.savequery-close-button:after,
+.savequery-close-button:before,
+.savequery-close-button-datacount:after,
+.savequery-close-button-datacount:before {
+  position: absolute;
+  left: 10px;
+  content: ' ';
+  height: 20px;
+  width: 3px;
+  background-color: #777777;
+}
+.savequery-close-button:before,
+.savequery-close-button-datacount:before {
+  transform: rotate(45deg);
+}
+.savequery-close-button:after,
+.savequery-close-button-datacount:after {
+  transform: rotate(-45deg);
 }
